--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.24.3",
     "bootstrap": "^5.3.3",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0"
   },
